[metadata]
version = 1.0.6
description = Visualize & train Romanian Model for LLM & SpacyNLP
url = https://github.com/izdrail
author = Stefan Bogdanel
author_email = stefan@izdrail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
python_requires = >=3.6
install_requires =
    streamlit>=1.18.0
    spacy>=3.0.0,<4.0.0
    pandas

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    romanian_streamlit/__init__.py
